# tick-tack-toe-app

./: .env  .env.production  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts
db/: schema.sql  tictactoe.db  tictactoe.db-shm  tictactoe.db-wal
server/: .env.example  .gitignore  .gitkeep  API.md  README.md  eslint.config.js  openapi.yaml  package-lock.json  package.json  prettier.config.js  tsconfig.json
server-rust/: API.md  Cargo.toml
server-rust/src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs
server-rust/src/db/: mod.rs
server-rust/src/http/: dto.rs  mod.rs  responses.rs  routes.rs  validators.rs
server-rust/src/http/handlers/: games.rs
server-rust/src/services/: game.rs
server/data/: tictactoe.db  tictactoe.db-shm  tictactoe.db-wal
server/src/: config.ts  index.ts
server/src/controllers/: gameController.ts  index.ts
server/src/db/: connection.ts  index.ts  init.ts
server/src/routes/: gameRoutes.ts  index.ts
server/src/services/: gameService.ts
server/src/types/: game.ts  game.types.ts  index.ts
server/src/utils/: helpers.ts  index.ts  logger.ts  validators.ts
src/: App.tsx  index.css
src/api/: client.ts  gameService.ts  transformers.ts
src/components/Alert/: Alert.tsx  AlertSection.tsx  AppSection.tsx  index.ts
src/components/Board/: Board.tsx
src/components/Icons/: index.ts  (+4 more)
src/config/: api.ts
src/hooks/: useClickOutside.ts  useGame.ts  useGames.ts
src/lib/: constants.ts  gameLogic.ts  savedGames.ts  types.ts  utils.ts
(+16 files in other folders)
