[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
dotenvy = "0.15"
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
