[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.9", features = ["macros", "json"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
time = { version = "0.3.44", features = ["serde", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
